Merge branch 'apps-6209' into 'main'
APPS-6209 pie chart

See merge request ggb/geogebra!9100

GitOrigin-RevId: aa5a8c767c2a4545e95bcb75eb65d708bd2fa592